--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://meaza-ketaw.github.io/Netflex-Clone-2-2025",
   "name": "net2app",
   "version": "0.1.0",
   "private": true,
@@ -17,13 +18,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
+    "eject": "react-scripts eject"
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,9 +45,9 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  },
+  }
   
-    "homepage": "https://meaza-ketaw.github.io/Netflex-Clone-2-2025"
+    
     
   
 }
